# tuukaa_rag-chatbot

./: .env.example  .env.sample  .gitignore  README.md  docker-compose.yml
.github/workflows/: security-scan.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  embed.py  embed_ingest.py  endpoints.py  lp.py  pdf.py  reports.py
backend/app/common/: schemas.py
backend/app/common/utils/: __init__.py  cost_estimator.py  ids.py
backend/app/core/: config.py  dependencies.py  document_processor.py  rag_engine.py  rate_limit.py
backend/app/core/prompts/: __init__.py
backend/app/core/services/: document_processor.py  rag_engine.py
backend/app/core/vector/: __init__.py
backend/app/core/web/: __init__.py  dependencies.py
backend/app/domains/embed/: __init__.py  prompts.py  schemas.py  service.py
backend/app/domains/lp/: __init__.py  prompts.py  schemas.py  service.py
backend/app/domains/pdf/: __init__.py  prompts.py  schemas.py  service.py
backend/app/entrypoints/: main.py
backend/app/models/: schemas.py
backend/tests/: conftest.py  test_document_processor.py  test_embed_endpoints.py  test_main_endpoints.py  test_rag_engine.py  test_security_features.py
backend/tests_copy/: conftest.py  test_document_processor.py  test_embed_endpoints.py  test_main_endpoints.py  test_rag_engine.py
docs/: tenant-daily-budget-breaker.md
frontend/: .env.local.example  .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  next.config.ts  package-lock.json  package.json
frontend/public/: embed.js
frontend/src/: auth.ts  middleware.ts  next-auth.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(apps)/chat-test/: layout.tsx  page.tsx
frontend/src/app/(apps)/embed-admin/: layout.tsx  page.tsx
frontend/src/app/(apps)/lp/: page.tsx
frontend/src/app/(apps)/pdf/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/auth/error/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/security-test/: page.tsx
frontend/src/app/widget-test/: page.tsx
frontend/src/components/: app-sidebar.tsx  global-header.tsx
frontend/src/components/ui/: button.tsx  select.tsx  switch.tsx
frontend/src/lib/: api.ts  buildClientReportEmail.ts  config.ts  settings-store.ts
scripts/: run-security-tests.sh  security-check.sh  test-security-production.sh
(+8 files in other folders)
