[tool.poetry]
name = "tuukaa-api"
version = "0.1.0"
description = "tuukaa API - RAGベースのQ&Aシステム"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI関連（フェーズ2で追加）
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0.post1"}
python-multipart = "0.0.6"
pydantic-settings = "2.10.1"
# フェーズ1から継承（LangChain関連）- lockに合わせて固定
langchain = "0.3.27"
langchain-community = "0.3.29"
langchain-openai = "0.3.32"
# フェーズ1から継承（その他）- 完全に同じバージョン
python-dotenv = "1.0.1"
tiktoken = "0.9.0"
# ChromaDB は Rust バックエンド API 変更により 1.x 系で breaking があるため 0.5 系に固定
chromadb = "0.5.23"
# フェーズ1から継承（Streamlit - 将来の比較用に残しておく）
streamlit = "1.49.1"
 # ファイル抽出系（本番依存）
 pypdf = "4.3.1"
 python-docx = "1.2.0"
 python-pptx = "0.6.23"
openpyxl = "3.1.5"
redis = "6.4.0"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "0.23.8"
black = "24.10.0"
flake8 = "7.3.0"
# FastAPI開発用に追加（ChromaDBとの互換性を考慮）
httpx = "0.27.2"
mypy = "1.17.1"
isort = "5.13.2"
# セキュリティスキャン
safety = "^3.2.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
